[gd_scene load_steps=17 format=3 uid="uid://blk5upqrse004"]

[ext_resource type="Script" path="res://scenes/entities/player/player_boat.gd" id="1_0tnni"]
[ext_resource type="Texture2D" uid="uid://c5bsj53gkqqqw" path="res://assets/boat.png" id="2_v6lwh"]
[ext_resource type="Script" path="res://scenes/entities/player/water_trail.gd" id="3_hyxur"]
[ext_resource type="Texture2D" uid="uid://c4sb62hcu6rv7" path="res://assets/arrow.png" id="3_nukac"]
[ext_resource type="Script" path="res://scenes/entities/state_machine.gd" id="3_pfqpi"]
[ext_resource type="Texture2D" uid="uid://l4i2pbw25eqp" path="res://assets/ripple.png" id="3_xnljd"]
[ext_resource type="Script" path="res://scenes/entities/player/states/idle.gd" id="4_cnpij"]
[ext_resource type="Script" path="res://scenes/entities/player/states/move.gd" id="4_xfj8a"]
[ext_resource type="Script" path="res://scenes/entities/player/states/cast.gd" id="8_ef00f"]
[ext_resource type="Script" path="res://scenes/entities/player/states/fishing.gd" id="10_l23x7"]
[ext_resource type="Script" path="res://scenes/entities/player/select_bait.gd" id="10_svh86"]
[ext_resource type="PackedScene" uid="uid://cse3rppgle6dh" path="res://scenes/ui/game_menu.tscn" id="11_k266c"]
[ext_resource type="AudioStream" uid="uid://b50nsoyfchrt0" path="res://assets/sounds/effects/sfx_boat.mp3" id="13_0rhgr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8bi6u"]
size = Vector2(8, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gmrwm"]
size = Vector2(6, 10)

[sub_resource type="Curve" id="Curve_log4j"]
_data = [Vector2(0, 1), 0.0, -0.505495, 0, 0, Vector2(1, 0.494505), -0.505495, 0.0, 0, 0]
point_count = 2

[node name="PlayerBoat" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 17
motion_mode = 1
script = ExtResource("1_0tnni")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_8bi6u")

[node name="sprite" type="Sprite2D" parent="."]
z_index = 10
rotation = 1.5708
texture = ExtResource("2_v6lwh")
vframes = 4
frame = 1

[node name="arrow" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_nukac")
centered = false
offset = Vector2(8, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gmrwm")

[node name="WaterTrail" type="Line2D" parent="."]
show_behind_parent = true
top_level = true
z_index = -1
position = Vector2(1, 0)
width = 32.0
width_curve = SubResource("Curve_log4j")
texture = ExtResource("3_xnljd")
texture_mode = 1
script = ExtResource("3_hyxur")

[node name="States" type="Node" parent="."]
script = ExtResource("3_pfqpi")

[node name="Idle" type="Node" parent="States"]
script = ExtResource("4_cnpij")

[node name="Move" type="Node" parent="States"]
script = ExtResource("4_xfj8a")

[node name="Cast" type="Node" parent="States"]
script = ExtResource("8_ef00f")

[node name="SelectBait" type="Node" parent="States"]
script = ExtResource("10_svh86")

[node name="Fishing" type="Node" parent="States"]
script = ExtResource("10_l23x7")

[node name="Debug" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="cast" type="Label" parent="Debug"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="pos" type="Label" parent="Debug"]
visible = false
layout_mode = 0
offset_left = -94.0
offset_top = -25.0
offset_right = 99.0
offset_bottom = -2.0
text = "1.1, 2.2"
horizontal_alignment = 1

[node name="GameMenu" parent="." instance=ExtResource("11_k266c")]
offset_left = -80.0
offset_top = -72.0
offset_right = 80.0
offset_bottom = 71.0

[node name="sounds" type="Node" parent="."]

[node name="boat" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource("13_0rhgr")
volume_db = -18.0
pitch_scale = 0.6

[node name="cast" type="AudioStreamPlayer" parent="sounds"]
volume_db = -5.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
